# git-share-obj

./: Cargo.toml  README.md
.claude/: settings.local.json
docs/: processing-flow-ja.md  safe-fsck-rollback-plan.md
src/: app.rs  cli.rs  fsck.rs  hardlink.rs  i18n.rs  lib.rs  lock.rs  main.rs  scanner.rs
