[package]
name = "git-share-obj"
version = "0.1.0"
edition = "2021"
description = "Gitオブジェクトの重複ファイルをハードリンクで共有するツール"
license = "GPL-2.0-only"
readme = "README.md"
repository = "https://github.com/densuke/git-share-obj"
keywords = ["git", "dedup", "hardlink", "storage"]
categories = ["command-line-utilities", "filesystem"]

[dependencies]
clap = { version = "4", features = ["derive"] }
walkdir = "2"
sys-locale = "0.3"
anyhow = "1"
libc = "0.2"

[dev-dependencies]
tempfile = "3"
